--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pdfkit==1.0.0
 gunicorn==21.2.0
 Flask-Limiter==3.5.0
 Flask-Talisman==1.1.0
+openpyxl==3.1.5
 Bootstrap-Flask==2.2.0
 Werkzeug==3.1.4
 Jinja2==3.1.6
